test/good/functions/func10.px

func f(a: [Rat]): [Float] def
    return [a[1]]

print f([3, 10^-20])
