test/bad/functions/variadic08.px

func f(...args: [Float]): Void def
    return

f([0f])
